    * #234 Can't seem to connect to my jenkins server with the latest version 0.13.6-2020.1
    * Add Notification group to configure the behaviour in IDE settings.
    * Fix: regression: remove trailing Slash for URL Validation
    * #230: jobs in folders: job name too long

Version 0.13.6
    * #225 Git Branch Parameter is unsupported
    * #227 Jenkins invalid configuration causes AuthenticationException and UI not respond correctly to this

Version 0.13.5
    * #221 Allow showing all build results in the status bar. Thanks to @nvdweem
    * #222 Separate icon for running builds. Thanks to @nvdweem
    * #217 Show Log not possible for selected Job if self-signed or invalid SSL certificate is used
    * #223 FileParameterDefinition is unsupported

Version 0.13.4
    * #219 How to run a jenkins job with hidden fields?
    * #218 "Show log" on Job without Build leads to error

Version 0.13.3
    * add GoTo Allure report
    * #213 NodeParameterDefinition is unsupported
    * #215 Read timed out: Add socket and connection timeout to Configuration (default 10 sec.)

Version 0.13.2
    * #64: NumberFormatException on start of IntelliJ
    * #207: NumberFormatException from Build.createBuildFromRss #207
    * #208: Jenkins.LoadBuilds already registered Exception

Version 0.13.1
    #202: Upload Patch not work for 2019.3.4+
    #201: Error reading jenkins.diff file
    #204: Password Parameter default value ignored

Version 0.13.0
    * 2020.1 API Compatibility
    * require JBR11 for version 2020.1+
    * #195: NullPointerException when "Show log" is clicked and Job Url is used as Server Address
    * #145: parameter separator plugin problems
    * #80: Support text parameters in builds
    * #190: Trigger Build on Double click
    * new Icons: Reuse Idea Icons and use Idea guideline for status color

Version 0.12.0
    * #141: Multibranch pipeline builds not shown
    * new Icons: Reuse Idea Icons and use Idea guideline for status color