@@ -12,6 +12,7 @@
         Add Notification group to configure the behaviour in IDE settings.(Settings -> Appearance -> Notifications -> Jenkins Notifications)
     </li>
     <li>#230: jobs in folders: job name too long</li>
+    <li>#231: jobs in folders: collapsed after refresh</li>
 </ul>
 <h3>0.13.6</h3>
 <ul>
